# event-xml-to-ilf

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLATION.md  README.md  vcpkg.json
lib/libilf/ILF/: ILF.cpp  ILF.h
src/: main.cpp  makefile  windows_wrapper.h  xml_translator.cpp  xml_translator.h
test/: makefile  test  test.cpp
test/input-logs/: create_files.sh
